tests/data/placebo/test_alb_wafv2_enabled_filter/wafv2.ListResourcesForWebACL_1.json
{
    "status_code": 200,
    "data": {
        "ResourceArns": [
            "arn:aws:elasticloadbalancing:us-east-1:123456789012:loadbalancer/app/alb-unpermitted-acl/8fff4889679d1278"
        ],
        "ResponseMetadata": {}
    }
}
